@@ -63,6 +63,8 @@ public class ChildContext extends Context {
         setClientDispatcher(new ChildClientDispatcher(this));
         setServerDispatcher((parentContext != null) ? getParentContext()
                 .getServerDispatcher() : null);
+        setExecutorService((parentContext != null) ? new WrapperScheduledExecutorService(
+                parentContext.getExecutorService()) : null);
     }
 
     /**
