@@ -46,12 +46,13 @@ import org.restlet.engine.util.SystemUtils;
  * recommended that those role don't reflect an actual organization, but more
  * the functional requirements of your application.
  * 
- * Also, two roles are not considered equals if they belong to the same parent
- * application and have the same the name and child roles.
+ * Two roles are considered equals if they belong to the same parent application
+ * and have the same name and child roles. The description isn't used for
+ * equality assessment.
  * 
- * Since version 2.2, they need to be the same Java object. In order to prevent
- * the multiplication of equal Role instances, you should try to call
- * {@link Application#getRole(String)} method but this isn't mandatory anymore.
+ * Since version 2.2, they don't need to be the same Java objects anymore. In
+ * order to prevent the multiplication of equivalent {@link Role} instances, you
+ * should try to call {@link Application#getRole(String)} method.
  * 
  * @author Jerome Louvel
  * @author Tim Peierls
